@@ -3,6 +3,13 @@
 	* pykickstart/commands/fc4.py:  Added first run at data and command
 	handling support for Fedora Core 4.
 
+	* pykickstart/commands/fc4.py (KickstartLogVolData,
+	KickstartNetworkData, KickstartPartData, KickstartRaidData,
+	KickstartVolGroupData, KickstartZFCPData):  Add named arguments to
+	__init__ functions to make creating objects programatically easier.
+	* pykickstart/commands/fc6.py (KickstartDmRaidData,
+	KickstartIscsiData, KickstartRepoData, KickstartUserData):  Likewise.
+
 2006-12-11  Chris Lumens  <clumens@redhat.com>
 
 	* validator/ksvalidator:  Update to handle multiple versions.
